[package]
name = "metis-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
rand.workspace = true
zeroize.workspace = true
libsecp256k1.workspace = true

[lints]
workspace = true
