[package]
name = "metis-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
tendermint-rpc.workspace = true
tendermint-proto.workspace = true
tendermint.workspace = true

metis-primitives.workspace = true
metis-vm.workspace = true
metis-crypto.workspace = true

tokio.workspace = true
cid.workspace = true
fvm_ipld_encoding.workspace = true
fvm_shared.workspace = true
base64 = "0.22.1"
bytes = "1.10.1"

[lints]
workspace = true
